--- a/css/style.css
+++ b/css/style.css
@@ -1039,28 +1039,49 @@ body::after {
   background: radial-gradient(50% 50% at 50% 50%, rgba(125, 125, 125, 0.15) 14.23%, rgba(217, 217, 217, 0) 100%);
   opacity: 0.6;
 }
-.main-section_main .main-section__body {
-  margin-bottom: 9.75rem;
+.main-section_main {
+  padding: 0;
+}
+.main-section_main .advantages {
+  position: relative;
+  padding-bottom: 15.625rem;
+  padding-top: 9.75rem;
 }
 @media (max-width: 71.875em) {
-  .main-section_main .main-section__body {
-    margin-bottom: 8.125rem;
+  .main-section_main .advantages {
+    padding-top: 8.125rem;
   }
 }
 @media (max-width: 61.99875em) {
-  .main-section_main .main-section__body {
-    margin-bottom: 6.875rem;
+  .main-section_main .advantages {
+    padding-top: 6.875rem;
   }
 }
 @media (max-width: 47.99875em) {
-  .main-section_main .main-section__body {
-    margin-bottom: 5.625rem;
+  .main-section_main .advantages {
+    padding-top: 5.625rem;
   }
 }
 @media (max-width: 29.99875em) {
-  .main-section_main .main-section__body {
-    margin-bottom: 4.375rem;
+  .main-section_main .advantages {
+    padding-top: 4.375rem;
   }
+}
+.main-section_main .advantages::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(0, -50%);
+  width: 100%;
+  height: 646px;
+  transform: translate(-50%, -50%);
+  opacity: 0.6;
+  background: url("../img/icons/ellipse.svg") center/cover no-repeat;
+}
+.main-section_main .advantages__item {
+  position: relative;
+  z-index: 2;
 }
 .main-section__body {
   min-height: 100vh;
